# RoboCInmulator

./: CMakeLists.txt
src/libs/: genetic_pool.cpp  genetic_pool.hpp  simulation_group.hpp
src/tests/: test_gen.cpp  test_genetic_agent.cpp  test_load.cpp
